# macos-perf

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.hpp
examples/: main.rs
src/: lib.rs  m1cycles.cpp  m1cycles.hpp  main.rs  performance_counters.rs
tests/: lib.rs
