[package]
name = "rust-macos-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build.release]
debug=true


[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.72"

[dependencies]
log = "0.4.14"
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3.5"
sudo = "0.6.0"
eyre = "0.6.5"